  * Add Recurring Templates

* Testing
  * Accounts test suite
  * Charge Types Controller test suite
  * Entries Controller test suite
  * Users test suite

== 1.4.0

* Enhancements
  * Update to Rails 3.1.3 and Contour 0.7.0
  * Updated jQuery Calls to use jQuery 1.7 specification (.live to .on)
  * Removed JavaScript functions that are provided by Contour

* Bug Fix
  * Graphs now render correctly in IE7 and IE8
  * Autocomplete now works correctly when using a subdomain

* Testing
  * Test Coverage is now at 100% with help of SimpleCov

== 1.3.0

* Enhancements
  * Update Rails to 3.1.1 and Contour 0.5.6
  * Changing months now uses jQuery Slide transition on the Month Overview
  * Clicking left and right in Month Overview will transition between months
  * Current Balance page now lets you calculate your maximum daily spending until your next paycheck (the default day is the beginning of the next month)

== 1.2.0

* Enhancements
  * Update Rails to 3.1.0.rc6
  * Major redesign using a better CSS base template (BlueTrip CSS Framework)
  * New entries made from calendar are now redirected back to the calendar
  * Main dashboard page broken down to Month Overview, Averages, and Current Balance Pages
  * Links added for easier navigation to and from accounts and charge types
  * Validation errors now correctly highlight invalid fields

* Testing
  * Add Navigation integration tests for friendly forwarding and redirection to login page

== 1.1.0

* Enhancements
  * Update Rails to 3.1.0.rc4
  * Replace Prototype with jQuery
  * Replace WillPaginate with Kaminari
  * Update Devise to 1.3.4
  * Replace CalendarDateSelect with jQuery DatePicker
  * Sort Entry Autocomplete by most commonly used

* Testing
  * Fixtures updated
  * Test base cleaned up

== 1.0.0

* Accounts can be created
* Charge types can be added to accounts
* Entries can be input from calendar view and associated with charge types
* Overall graph allows view of yearly and month by month spending