@@ -3,13 +3,13 @@ source 'http://rubygems.org'
 gem 'rails', '3.1.3'
 
 # Database Adapter
-gem 'mysql2', '0.3.7',                    :platforms => [:ruby]
-gem 'sqlite3',                            :platforms => [:mswin, :mingw]
-gem 'thin', '~> 1.2.11',                  :platforms => [:mswin, :mingw]
-gem 'eventmachine', '~> 1.0.0.beta.4.1',  :platforms => [:mswin, :mingw]
+gem 'mysql2',         '0.3.7',              platforms: [ :ruby ]
+gem 'sqlite3',                              platforms: [ :mswin, :mingw ]
+gem 'thin',           '~> 1.2.11',          platforms: [ :mswin, :mingw ]
+gem 'eventmachine',   '~> 1.0.0.beta.4.1',  platforms: [ :mswin, :mingw ]
 
 # Gems used by project
-gem 'contour', '~> 0.7.0'           # Basic Layout and Assets
+gem 'contour',        '~> 0.7.0'    # Basic Layout and Assets
 gem 'devise'                        # User Authorization
 gem 'omniauth'                      # User Multi-Authentication
 gem 'kaminari'                      # Pagination
@@ -27,7 +27,7 @@ gem 'jquery-rails'                  # JavaScript Engine
 # Testing
 group :test do
   # Pretty printed test output
-  gem 'win32console', :platforms => [:mswin, :mingw]
-  gem 'turn', '~> 0.8.3', :require => false
-  gem 'simplecov', :require => false
+  gem 'win32console',                       platforms: [ :mswin, :mingw ]
+  gem 'turn',         '~> 0.8.3',           require: false
+  gem 'simplecov',                          require: false
 end
