@@ -1,9 +1,9 @@
-<% @title = 'Dashboard' %>
+<% @title = 'Calendar' %>
 
 <h1>Month Breakdown</h1>
 
 <div style="text-align:center;margin-top:-10px;float:middle">
-  <%= form_tag dashboard_path, :remote => true, :update => 'spending', :method => :get, :id => 'search-form' do %>
+  <%= form_tag calendar_entries_path, :remote => true, :update => 'spending', :method => :get, :id => 'search-form' do %>
     <%= hidden_field_tag :direction, 0 %>
     <%= link_to_function '&laquo;'.html_safe, "goBackOneYear();", :style => 'text-decoration:none', :title => 'Previous Year' %>
     <%= link_to_function '&lsaquo;'.html_safe, "goBackOneMonth();", :style => 'text-decoration:none', :title => 'Previous Month' %>
