@@ -1,9 +1,4 @@
 Balance::Application.routes.draw do  
-  match '/auth/failure' => 'contour/authentications#failure'
-  match '/auth/:provider/callback' => 'contour/authentications#create'
-  match '/auth/:provider' => 'contour/authentications#passthru'
-
-  resources :authentications, :controller => 'contour/authentications'
 
   resources :accounts do
     get :search, :on => :collection
@@ -16,6 +11,7 @@ Balance::Application.routes.draw do
   resources :entries do
     post :mark_charged, :on => :member
     collection do
+      get :calendar
       get :overview
       get :earning_spending_graph
       get :autocomplete
@@ -24,10 +20,14 @@ Balance::Application.routes.draw do
     end
   end
   
-  devise_for :users, :controllers => {:registrations => 'contour/registrations', :sessions => 'contour/sessions', :passwords => 'contour/passwords'}, :path_names => { :sign_up => 'register', :sign_in => 'login' }
+  devise_for :users, controllers: { registrations: 'contour/registrations',
+                                         sessions: 'contour/sessions',
+                                        passwords: 'contour/passwords' },
+                     path_names:  {       sign_up: 'register',
+                                          sign_in: 'login' }
   
   match "/about" => "sites#about", :as => :about
-  match "/dashboard" => "users#dashboard", :as => :dashboard
   
-  root :to => "users#dashboard"
+  root :to => "entries#calendar"
+  
 end
